# n_siqs

./: CMakeLists.txt  README.txt  TODO  Teoria SIQS.docx  crash_test.sh  debug.sh  main (copia).c  run.sh  run_with_time.sh  run_with_timing.sh  run_with_valgrind.sh
crivello_quadratico (copia)/: basic.c  basic.h  biprime.txt  biprime2.txt  criv_quad.c  criv_quad.h  domini.txt  dyn_list_base.c  dyn_list_base.h  dynamic_list.c  dynamic_list.h  factorization_biprime.txt  file_log.txt  list_factor_base.c  list_factor_base.h  list_factorization.c  list_factorization.h  list_square_relation.c  list_square_relation.h  main.c  main.h  makefile  math_function.c  math_function.h  matrix_function.c  matrix_function.h  miller_rabin.c  miller_rabin.h  my_pari_functions.txt  number.txt  pollard_rho.c  print.c  print.h  run  run.c  run2  run2.c  runtest  runtest.c  runtest2  (+2 more)
log_files/: file_log.txt  valgrind-out.txt
logs/: valgrind-out.txt
numbers/: README.txt  factorization_numbers_biprime.txt  number_biprime.txt  number_biprime_test_to_factorize.txt
pari_gp/: my_pari_functions.txt
src/: Bsmooth_functions.c  Bsmooth_functions.h  M_and_B_functions.c  M_and_B_functions.h  a_b_c_BK_functions.c  a_b_c_BK_functions.h  a_b_c_functions.c  a_b_c_functions.h  array_numbers.c  array_numbers.h  atomic.h  basic.c  basic.h  basicv2.c  basicv2.h  crash_test.sh  criv_quad  criv_quad.c  criv_quad.h  criv_quad_debug  criv_quad_with_timing  debug.sh  dynamic_list.c  dynamic_list.h  factor_base_functions.c  factor_base_functions.h  factorization_functions.c  factorization_functions.h  factorization_functionsv2.c  factorization_functionsv2.h  list_factorization.c  list_factorization.h  list_square_relation.c  list_square_relation.h  list_square_relations.c  list_square_relations.h  main.c  main.h  makefile  math_function.c  (+38 more)
